Add javadocs, update API

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -5,6 +5,8 @@ plugins {
 dependencies {
     compileOnly project(":common")
 
+    implementation 'org.apiguardian:apiguardian-api:1.1.2'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
