--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
 }
 
-group = 'cn.afternode'
+group = 'cn.afternode.genlibmanager'
 version = '0.1.0'
 
 allprojects {
