feat: Allows to create standalone repository

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -1,4 +1,7 @@
 repository:
+  # Allow plugins to create standalone repositories
+  allow-standalone: false
+
   # Remove Maven Central
   # Enable this to use mirror (add into repositories)
   remove-central: false
