feat(spigot): Mark as folia supported

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -3,3 +3,4 @@ version: '${version}'
 main: cn.afternode.genlibman.spigot.GenLibManagerPlugin
 api-version: '1.17'
 load: STARTUP
+folia-supported: true
